// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderization when charts available should render the list of charts 1`] = `
<section
  className="Catalog"
>
  <LoadingWrapper
    loaded={true}
    type={0}
  >
    <PageHeader>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <h1>
          Catalog
        </h1>
        <RepoSelector
          appRepoState={
            Object {
              "errors": Object {},
              "isFetching": false,
              "repos": Array [
                Object {
                  "metadata": Object {
                    "name": "stable",
                  },
                },
              ],
            }
          }
          push={[MockFunction]}
          repo=""
        />
        <SearchFilter
          className="margin-l-big"
          onChange={[Function]}
          onSubmit={[MockFunction]}
          placeholder="search charts..."
          value=""
        />
      </div>
    </PageHeader>
    <InfoBox
      msg=""
    />
    <LoadingWrapper
      loaded={true}
      type={0}
    >
      <CardGrid>
        <CatalogItem
          chart={
            Object {
              "attributes": Object {
                "description": "",
              },
              "id": "foo",
            }
          }
          isFeatured={false}
          key="foo"
        />
        <CatalogItem
          chart={
            Object {
              "attributes": Object {
                "description": "",
              },
              "id": "bar",
            }
          }
          isFeatured={false}
          key="bar"
        />
      </CardGrid>
    </LoadingWrapper>
  </LoadingWrapper>
</section>
`;

exports[`renderization when no charts should render a distinct 'no charts' message 1`] = `
<section
  className="Catalog"
>
  <LoadingWrapper
    loaded={true}
    type={0}
  >
    <PageHeader>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <h1>
          Catalog
        </h1>
        <RepoSelector
          appRepoState={
            Object {
              "errors": Object {},
              "isFetching": false,
              "repos": Array [
                Object {
                  "metadata": Object {
                    "name": "stable",
                  },
                },
              ],
            }
          }
          push={[MockFunction]}
          repo=""
        />
        <SearchFilter
          className="margin-l-big"
          onChange={[Function]}
          onSubmit={[MockFunction]}
          placeholder="search charts..."
          value=""
        />
      </div>
    </PageHeader>
    <InfoBox
      msg=""
    />
    <LoadingWrapper
      loaded={true}
      type={0}
    >
      <MessageAlertPage
        header="No charts found."
      />
    </LoadingWrapper>
  </LoadingWrapper>
</section>
`;
